google font add

--- a/index.html
+++ b/index.html
@@ -7,11 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Helping-Hand-Bangladesh</title>
     <link rel="shortcut icon" href="./my-images/screen-3.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Finlandica:ital,wght@1,500&family=Poppins&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>Helping-Hand-Bangladesh</h1>
-
+    <section>
+        <h1>Join With Us</h1>
+    </section>
 </body>
 
 </html>
