--- a/index.html
+++ b/index.html
@@ -15,8 +15,15 @@
 </head>
 
 <body>
-    <section>
-        <h1>Join With Us</h1>
+    <section class="sections">
+        <div class="text">
+            <h1 class="top-heading">Donate A Meal</h1>
+            <h3 class="quote">Inspiring a nation with food</h3>
+            <p class="paragraph">We can make a strong relationship with underprivileged children through <br> sharing
+                food. We are helping
+                people with food so that they do not feel that they are helpless and hungry.</p>
+            <button class="button">Donate Now</button>
+        </div>
     </section>
 </body>
 
