--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <section class="sections">
+    <section class="section1">
         <div class="text">
             <h1 class="top-heading">Donate A Meal</h1>
             <h3 class="quote">Inspiring a nation with food</h3>
@@ -24,6 +24,59 @@
                 people with food so that they do not feel that they are helpless and hungry.</p>
             <button class="button">Donate Now</button>
         </div>
+    </section>
+    <section class="section2">
+        <div class="donate-text">
+            <h1 id="donate-today">Donate Today</h1>
+            <p id="donate-today-text">Our accounts are maintained by professional and audited internally besides
+                externally. Every year, <br>
+                ACNABIN, one of the topmost audit firms in Bangladesh audit our financial process. We are the only <br>
+                volunteer organization in Bangladesh, do this external audit.</p>
+        </div>
+        <div class="parent-card">
+            <div class="child-card">
+                <h1>100tk</h1>
+            </div>
+            <div class="child-card" id="amount">
+                <h1 id="amount200">200tk</h1>
+            </div>
+            <div class="child-card">
+                <h1>500tk</h1>
+            </div>
+            <div class="child-card">
+                <h1>1000tk</h1>
+            </div>
+            <div class="child-card">
+                <h1>5000tk</h1>
+            </div>
+
+        </div>
+        <div>
+            <p id="other-amount">Other Amount (Taka)</p>
+        </div>
+        <div>
+            <hr id="hr-line">
+        </div>
+        <div>
+            <h3 id="payment-head">Choose Your payment method</h3>
+        </div>
+        <div class="payment-method">
+            <div class="payment-name" id="card">
+                <p>VISA/MASTER CARDS</p>
+            </div>
+            <div class="payment-name" id="mobile-banking">
+                <p>MOBILE BANKING</p>
+            </div>
+            <div class="payment-name" id="net-banking">
+                <p>NET BANKING</p>
+            </div>
+        </div>
+        <div id="button-align">
+            <div>
+                <button class="button" id="donate-today-button">Donate Now</button>
+            </div>
+        </div>
+
     </section>
 </body>
 
