--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     </section>
     <section class="section2">
         <div class="donate-text">
-            <h1 id="donate-today">Donate Today</h1>
-            <p id="donate-today-text">Our accounts are maintained by professional and audited internally besides
+            <h1 class="donate-header">Donate Today</h1>
+            <p class="donate-small-text">Our accounts are maintained by professional and audited internally besides
                 externally. Every year, <br>
                 ACNABIN, one of the topmost audit firms in Bangladesh audit our financial process. We are the only <br>
                 volunteer organization in Bangladesh, do this external audit.</p>
@@ -78,6 +78,65 @@
         </div>
 
     </section>
+    <section class="section3">
+        <div class="donate-text">
+            <h1 class="donate-header">Our Donation Plan</h1>
+            <p class="donate-small-text">Helping-Hand-Bangladesh conducts various activities aimed at the basic needs of
+                the people food, <br>
+                clothing, housing, education and medical for survival. In order to meet the basic needs of the deprived
+                <br>
+                children, we have been conducting several regular programs including one taka meal, Iftar and seheri
+                <br>
+                distribution in Ramadan, winter and eid cloth distribution, orphanage, free education program, one taka
+                <br>
+                medical treatment, one glass of milk, ambulance service, training center, scholarship program etc.
+            </p>
+        </div>
+        <div class="parent-card">
+            <div class="another-child-card" id="c1">
+                <img src="./icons/food.png" alt="food-icon">
+                <h3>Food for a family</h3>
+                <p>Our mission is to help both the materially poor
+                    and the poor in spirit.The materially poor are
+                    served by local school, clergy and lay leaders
+                    who have been empowered and supplied with goods
+                    by Food For The Poor.The poor in spirit are renewed
+                    by their relationship with and service to the poor
+                    through our direct our team of teaching, encouragement
+                    and prayer.Ultimately, we seek to bring both benefactors
+                    and recipients to a closer union with our Lord. ANd you can be part of this.</p>
+            </div>
+            <div class="another-child-card" id="c2">
+                <img src="./icons/blood.png" alt="blood-icon">
+                <h3>Emergency blood supply</h3>
+                <p>Through a partnership with more than 40 local hospitals, hosting more than 100 community blood drives
+                    each month and providing regular donation opportunities at our local centers,
+                    Helping-Hand-Bangladesh is proud to serve patients throughout the country. Most importantly - we
+                    couldn't do it without our volunteer blood donors. Thank you for giving the gift of life. we owe you
+                    for your support.</p>
+            </div>
+            <div class="another-child-card" id="c3">
+                <img src="./icons/shelter2.png" alt="shelter-icon">
+                <h3>Shelter for a family</h3>
+                <p>In 2017, Helping-Hand-Bangladesh launched the Rehabilitation 2030 initiative, which emphasizes the
+                    need for health system strengthening, and calls for all stakeholders worldwide to come together to
+                    work on different priority areas, including: improving leadership and governance; developing a
+                    strong multidisciplinary rehabilitation workforce; expanding financing for rehabilitation; and
+                    improving data collection and research on rehabilitation</p>
+            </div>
+            <div class="another-child-card" id="c5">
+                <img src="./icons/education.png" alt="education-icon">
+                <h3>Sponsor a child to educate</h3>
+                <p>With access to quality education children become lifelong learners, transforming their communities.
+                    When you sponsor a child, you are ensuring her/him a better future, helping them to reach their full
+                    potential thus breaking the cycle of poverty. You are supporting them with quality education and
+                    educational needs such as - schools equipment's, digital support etc.</p>
+            </div>
+        </div>
+    </section>
 </body>
+<footer>
+    <p id="footer-text">©2022-Present.developed by alif | All Rights Reserved</p>
+</footer>
 
 </html>
