--- a/index.html
+++ b/index.html
@@ -96,48 +96,89 @@
             <div class="another-child-card" id="c1">
                 <img src="./icons/food.png" alt="food-icon">
                 <h3>Food for a family</h3>
-                <p>Our mission is to help both the materially poor
-                    and the poor in spirit.The materially poor are
-                    served by local school, clergy and lay leaders
-                    who have been empowered and supplied with goods
-                    by Food For The Poor.The poor in spirit are renewed
-                    by their relationship with and service to the poor
-                    through our direct our team of teaching, encouragement
-                    and prayer.Ultimately, we seek to bring both benefactors
-                    and recipients to a closer union with our Lord. ANd you can be part of this.</p>
+                <div class="card-paragraph">
+                    <p id="p-c1">Our mission is to help both the materially poor
+                        and the poor in spirit.The materially poor are
+                        served by local school, clergy and lay leaders
+                        who have been empowered and supplied with goods
+                        by Food For The Poor.The poor in spirit are renewed
+                        by their.......... </p>
+                </div>
             </div>
             <div class="another-child-card" id="c2">
                 <img src="./icons/blood.png" alt="blood-icon">
                 <h3>Emergency blood supply</h3>
-                <p>Through a partnership with more than 40 local hospitals, hosting more than 100 community blood drives
-                    each month and providing regular donation opportunities at our local centers,
-                    Helping-Hand-Bangladesh is proud to serve patients throughout the country. Most importantly - we
-                    couldn't do it without our volunteer blood donors. Thank you for giving the gift of life. we owe you
-                    for your support.</p>
+                <div class="card-paragraph">
+                    <p id="p-c2">Through a partnership with more than 40 local hospitals, hosting more than 100
+                        community
+                        blood drives each month and providing regular donation opportunities at our local centers,
+                        Helping-Hand-Bangladesh is proud to serve patients throughout ........</p>
+                </div>
             </div>
             <div class="another-child-card" id="c3">
                 <img src="./icons/shelter2.png" alt="shelter-icon">
                 <h3>Shelter for a family</h3>
-                <p>In 2017, Helping-Hand-Bangladesh launched the Rehabilitation 2030 initiative, which emphasizes the
-                    need for health system strengthening, and calls for all stakeholders worldwide to come together to
-                    work on different priority areas, including: improving leadership and governance; developing a
-                    strong multidisciplinary rehabilitation workforce; expanding financing for rehabilitation; and
-                    improving data collection and research on rehabilitation</p>
+                <div class="card-paragraph">
+                    <p id="p-c3">In 2017, Helping-Hand-Bangladesh launched the Rehabilitation 2030 initiative, which
+                        emphasizes the need for health system strengthening, and calls for all stakeholders worldwide to
+                        come together to work on different priority areas, including improving...... </p>
+                </div>
             </div>
             <div class="another-child-card" id="c5">
                 <img src="./icons/education.png" alt="education-icon">
                 <h3>Sponsor a child to educate</h3>
-                <p>With access to quality education children become lifelong learners, transforming their communities.
-                    When you sponsor a child, you are ensuring her/him a better future, helping them to reach their full
-                    potential thus breaking the cycle of poverty. You are supporting them with quality education and
-                    educational needs such as - schools equipment's, digital support etc.</p>
+                <div class="card-paragraph">
+                    <p id="p-c4">With access to quality education children become lifelong learners, transforming their
+                        communities.
+                        When you sponsor a child, you are ensuring her/him a better future, helping them to reach their
+                        full
+                        potential thus breaking the cycle of poverty. You are supporting ........ </p>
+                </div>
             </div>
         </div>
+    </section>
+    <section class="section4">
+        <div class="section4-text">
+            <h1>
+                <span class="skip-text">Their Lives</span> depends on your donation.
+            </h1>
+            <p class="paragraph">
+                A sudden onrush of mountain runoff from upstream has affected most of the areas close to the border,
+                causing immense suffering to residents of the Companiganj, Gowainghat, Jointiapur, Zakiganj and
+                Kanaighat upazilas. Floods have also damaged the transport system in those areas, forcing the
+                authorities to close educational ......
+            </p>
+            <a target="_blank" href="https://www.bidyanondo.org/projects/Flood-Relief-Program"><button
+                    class="button-section4">How to
+                    contribute</button></a>
+
+        </div>
+        <div class="section4-image-div">
+            <img class="section4-image" src="./images/donation6.jpg" alt="sylhet-flood">
+        </div>
+    </section>
+    <section class="section5">
+        <div class="section5-image-div">
+            <img class="section5-image" src="./images/donation9.jpg" alt="flood-victim">
+
+        </div>
+        <div class="section5-text-div">
+            <h1>They need us <span class="skip-text"> to Survive</span></h1>
+            <p class="paragraph">At least 13 upazilas have been flooded, forcing the authorities to open 326 shelters
+                across the district, the authorities said. As many as 7,349 people have taken refuge in 95 centres.Local
+                residents who have taken refuge in shelters said they have been facing a severe food and drinking water
+                crisis as tubewells were flooded underwater and a three-day power cut disrupted the supply.</p>
+            <a target="_blank" href="https://www.bidyanondo.org/projects/Help-Ctg-Fire-Victims"><button
+                    class="button-section4">How to
+                    contribute</button></a>
+
+        </div>
+
     </section>
 
 </body>
 <footer>
-    <p id="footer-text">©2022-Present.developed by alif | All Rights Reserved</p>
+    <p id="footer-text">©2022-Present | Developed by alif | All Rights Reserved</p>
 </footer>
 
 </html>
