--- a/index.html
+++ b/index.html
@@ -175,6 +175,14 @@
         </div>
 
     </section>
+    <section class="section6">
+        <div class="campaign-heading">
+            <h1 id="campaign-head"><span id="our">Our</span> Campaigns</h1>
+        </div>
+        <div class="campaign-button-div">
+            <button class="campaign-button">VIEW ALL CAMPAIGNS→</button>
+        </div>
+    </section>
 
 </body>
 <footer>
