--- a/index.html
+++ b/index.html
@@ -137,43 +137,48 @@
             </div>
         </div>
     </section>
-    <section class="section4">
-        <div class="section4-text">
-            <h1>
-                <span class="skip-text">Their Lives</span> depends on your donation.
-            </h1>
-            <p class="paragraph">
-                A sudden onrush of mountain runoff from upstream has affected most of the areas close to the border,
-                causing immense suffering to residents of the Companiganj, Gowainghat, Jointiapur, Zakiganj and
-                Kanaighat upazilas. Floods have also damaged the transport system in those areas, forcing the
-                authorities to close educational ......
-            </p>
-            <a target="_blank" href="https://www.bidyanondo.org/projects/Flood-Relief-Program"><button
-                    class="button-section4">How to
-                    contribute</button></a>
+    <section class="combine4-5">
+        <section class="section4">
+            <div class="section4-text">
+                <h1>
+                    <span class="skip-text">Their Lives</span> depends on your donation.
+                </h1>
+                <p class="paragraph">
+                    A sudden onrush of mountain runoff from upstream has affected most of the areas close to the border,
+                    causing immense suffering to residents of the Companiganj, Gowainghat, Jointiapur, Zakiganj and
+                    Kanaighat upazilas. Floods have also damaged the transport system in those areas, forcing the
+                    authorities to close educational ......
+                </p>
+                <a target="_blank" href="https://www.bidyanondo.org/projects/Flood-Relief-Program"><button
+                        class="button-section4">How to
+                        contribute</button></a>
 
-        </div>
-        <div class="section4-image-div">
-            <img class="section4-image" src="./images/donation6.jpg" alt="sylhet-flood">
-        </div>
-    </section>
-    <section class="section5">
-        <div class="section5-image-div">
-            <img class="section5-image" src="./images/donation9.jpg" alt="flood-victim">
+            </div>
+            <div class="section4-image-div">
+                <img class="section4-image" src="./images/donation6.jpg" alt="sylhet-flood">
+            </div>
+        </section>
+        <section class="section5">
+            <div class="section5-image-div">
+                <img class="section5-image" src="./images/donation9.jpg" alt="flood-victim">
 
-        </div>
-        <div class="section5-text-div">
-            <h1>They need us <span class="skip-text"> to Survive</span></h1>
-            <p class="paragraph">At least 13 upazilas have been flooded, forcing the authorities to open 326 shelters
-                across the district, the authorities said. As many as 7,349 people have taken refuge in 95 centres.Local
-                residents who have taken refuge in shelters said they have been facing a severe food and drinking water
-                crisis as tubewells were flooded underwater and a three-day power cut disrupted the supply.</p>
-            <a target="_blank" href="https://www.bidyanondo.org/projects/Help-Ctg-Fire-Victims"><button
-                    class="button-section4">How to
-                    contribute</button></a>
+            </div>
+            <div class="section5-text-div">
+                <h1>They need us <span class="skip-text"> to Survive</span></h1>
+                <p class="paragraph">At least 13 upazilas have been flooded, forcing the authorities to open 326
+                    shelters
+                    across the district, the authorities said. As many as 7,349 people have taken refuge in 95
+                    centres.Local
+                    residents who have taken refuge in shelters said they have been facing a severe food and drinking
+                    water
+                    crisis as tubewells were flooded underwater and a three-day power cut disrupted the supply.</p>
+                <a target="_blank" href="https://www.bidyanondo.org/projects/Help-Ctg-Fire-Victims"><button
+                        class="button-section4">How to
+                        contribute</button></a>
 
-        </div>
+            </div>
 
+        </section>
     </section>
     <section class="section6">
         <div class="campaign-heading">
@@ -181,6 +186,20 @@
         </div>
         <div class="campaign-button-div">
             <button class="campaign-button">VIEW ALL CAMPAIGNS→</button>
+        </div>
+    </section>
+    <section class="section7">
+        <div class="join-us-image-div">
+            <img class="join-us-image" src="./my-images/JOIN US-2.jpg" alt="join-volunteer">
+        </div>
+        <div class="join-us-text">
+            <h2>Registration For Volunteer Programme</h2>
+            <p>Serve the huminity</p>
+            <p id="reg-text">Our opportunity to volunteer to inspire a nation extends from the work of the Office to the
+                grassroots
+                personnel stage. If you have a commitment to time and work as a marginalized community, we are waiting
+                to welcome you to our team.</p>
+            <button class="registration-button">REGISTRATION</button>
         </div>
     </section>
 
