--- a/index.html
+++ b/index.html
@@ -202,6 +202,25 @@
             <button class="registration-button">REGISTRATION</button>
         </div>
     </section>
+    <section class="section8">
+        <div class="get-update-text">
+            <h1 id="get-update-header">Get Our Update</h1>
+            <p id="get-update-paragraph">Our news-letter will update you every kind of inormation about our projects.
+                <br> So, you can subscribe
+                it
+                with
+                your
+                E-mail id & its totally Free, no service charge.</p>
+        </div>
+        <div class="Email-button-div">
+            <div>
+                <input id="input-box" type="text" placeholder="E-mail">
+            </div>
+            <div>
+                <button id="subscribe-button">Subscribe</button>
+            </div>
+        </div>
+    </section>
 
 </body>
 <footer>
