--- a/index.html
+++ b/index.html
@@ -210,7 +210,8 @@
                 it
                 with
                 your
-                E-mail id & its totally Free, no service charge.</p>
+                E-mail id & its totally Free, no service charge.
+            </p>
         </div>
         <div class="Email-button-div">
             <div>
